edit descript food

--- a/dining/food0001.html
+++ b/dining/food0001.html
@@ -92,7 +92,9 @@
                             </div>
                         </div>
                         <h1> 50% discount on "Taste of YUÈ" set (for 4 persons)</h1>
-                        <div class="description"></div>
+                        <div class="description">#The Michelin Plate <br>
+
+                            Special price : HK$1,320 per set (original price : HK$2,640 per set)</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_1_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
