--- a/dining/food0003.html
+++ b/dining/food0003.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Tsing Tao Beer (1 glass) or mocktail (1 cup)</h1>
-                        <div class="description"></div>
+                        <div class="description">Enjoy the offer upon spending of HK$200 or above</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.facebook.com/champkitchen">
                                 <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
