--- a/dining/food0008.html
+++ b/dining/food0008.html
@@ -92,12 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one on free designated items</h1>
-                        <div class="description">Designated items:<br>
-                            1. Mushroom Soup with Cheese (HK$88)<br>
-                            2. Fish Ball with Flat Noodle in Superior Broth (HK$88)<br>
-                            3. Margarita Pizza (8") (HK$138)<br>
-                            4. Seafood Fried Rice in XO Sauce XO (HK$158)<br>
-                            5. Pad Thai (HK$158) </div>
+                        <div class="description"></div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_8_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
@@ -141,6 +136,18 @@
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Designated items:<br>
+                                1. Mushroom Soup with Cheese (HK$88)<br>
+                                2. Fish Ball with Flat Noodle in Superior Broth (HK$88)<br>
+                                3. Margarita Pizza (8") (HK$138)<br>
+                                4. Seafood Fried Rice in XO Sauce XO (HK$158)<br>
+                                5. Pad Thai (HK$158) </p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
                         </div>
                     </div>
 <div class="book">
