--- a/dining/food0009.html
+++ b/dining/food0009.html
@@ -93,12 +93,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free designated items</h1>
-                        <div class="description">Designated items:<br>
-                            1. American Prime Short Ribs (HK$198)<br>
-                            2. Okinawa Boneless Pork Collar (HK$188)<br>
-                            3. Sliced Kamei Chicken (HK$238)<br>
-                            4. Fish Maws (HK$238)<br>
-                            5. Featured Mushrooms Platter (9 Kinds) (HK$358) </div>
+                        <div class="description"></div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_9_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
@@ -142,6 +137,18 @@
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Designated items:<br>
+                                1. American Prime Short Ribs (HK$198)<br>
+                                2. Okinawa Boneless Pork Collar (HK$188)<br>
+                                3. Sliced Kamei Chicken (HK$238)<br>
+                                4. Fish Maws (HK$238)<br>
+                                5. Featured Mushrooms Platter (9 Kinds) (HK$358) </p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
                         </div>
                     </div>
 <div class="book">
