--- a/dining/food0011.html
+++ b/dining/food0011.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <h1> 50% discount on main course items</h1>
-                        <div class="description"></div>
+                        <div class="description">Enjoy the offer with a minimum spending of HK$300 per person on food a la carte</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.divino.com.hk"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
