--- a/dining/food0015.html
+++ b/dining/food0015.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% discount on Supreme Seafood Feast (for 2 persons)</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price:  HK$790 per person</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_15_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
