--- a/dining/food0019.html
+++ b/dining/food0019.html
@@ -93,7 +93,8 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Ah Yung Kitchen Abalone Set</h1>
-                        <div class="description"></div>
+                        <div class="description">#Master Chef Recommendation Restaurant 2019 <br>
+                            Original price:  HK$1,380</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_19_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
