--- a/dining/food0025.html
+++ b/dining/food0025.html
@@ -93,7 +93,9 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Double Boiled Conch Soup with Coix Seed & Pear and house beer</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price<br>
+                            Double Boiled Conch Soup with Coix Seed & Pear : HK$98<br>
+                            House Beer : HK$58</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.kimberley.hk/eng/dining/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
