--- a/dining/food0026.html
+++ b/dining/food0026.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <h1> 50% discount on Barbecued Pork with Honey Sauce (dine-in only)</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price:  HK$300</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.seventhson.hk"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
