--- a/dining/food0028.html
+++ b/dining/food0028.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Hello Hong Kong Holiday@Home Set Dinner</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price: HK$568 per person</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_28_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
