--- a/dining/food0038.html
+++ b/dining/food0038.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Beef & Liberty x "Double Trouble" Burgers</h1>
-                        <div class="description"></div>
+                        <div class="description">The offer is only valid for burgers, on every Monday from 6:00pm onwards (including public holidays).</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.beef-liberty.com/hk/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
