--- a/dining/food0047.html
+++ b/dining/food0047.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free EFES Beer (The Mediterranean Beer)</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price : HK$33</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://lammarainbow.com"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
