--- a/dining/food0049.html
+++ b/dining/food0049.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)</h1>
-                        <div class="description"></div>
+                        <div class="description">Special price : HK$1,088 (original price : HK$1,640)</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_49_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
