--- a/dining/food0050.html
+++ b/dining/food0050.html
@@ -92,11 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free selected items</h1>
-                        <div class="description">Monday : Buy a wagyu and get a free spicy coconut garlic prawns or six
-                            oysters<br>
-                            Tuesday : Buy a wagyu and get a free mussels or clams<br>
-                            Wednesday : Buy a Burger and get the first and last beer on us<br>
-                            Thursday : Buy a wagyu and get a free half chilli garlic lo</div>
+                        <div class="description"></div>
                         <div class="btn-book"><a class="btn-cta print" href="https://tmeats.com/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
@@ -140,6 +136,17 @@
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Monday : Buy a wagyu and get a free spicy coconut garlic prawns or six
+                                oysters<br>
+                                Tuesday : Buy a wagyu and get a free mussels or clams<br>
+                                Wednesday : Buy a Burger and get the first and last beer on us<br>
+                                Thursday : Buy a wagyu and get a free half chilli garlic lo</p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
                         </div>
                     </div>
 <div class="book">
