--- a/dining/food0051.html
+++ b/dining/food0051.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Signature Dishes & Stew Set (for 2 persons)</h1>
-                        <div class="description"></div>
+                        <div class="description">Special price : HK$648 for 4 persons (original price : HK$648 for 2 persons)</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_51_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
