--- a/dining/food0055.html
+++ b/dining/food0055.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free main course</h1>
-                        <div class="description"></div>
+                        <div class="description">Available on Monday, Wednesday to Friday after 6:30pm (except Tuesday, Saturday, Sunday and public holidays)</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.oceanpark.com.hk/en"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
