--- a/dining/food0057.html
+++ b/dining/food0057.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Seafood Treasure Set menu</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price : HK$298 per person</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_57_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
