--- a/dining/food0058.html
+++ b/dining/food0058.html
@@ -92,11 +92,7 @@
                             </div>
                         </div>
                         <h1> Special discount on roasted goose</h1>
-                        <div class="description">Special Price<br>
-                            Whole : HK$398 (original price : HK$488)<br>
-                            Half : HK$228 (original price : HK$298)<br>
-                            Dish : HK$128 (original price : HK$168)<br>
-                        </div>
+                        <div class="description">Available from 6pm to 10pm</div>
                         <div class="btn-book"><a class="btn-cta print" href=""> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
                             <div class="addthis_inline_share_toolbox"><a> <span class="share-icon"></span><span
@@ -126,6 +122,17 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
+                        <div class="details">
+							<h3>Offer Details</h3>
+							<div class="content"> 
+								<p>Special Price<br>
+                                    Whole : HK$398 (original price : HK$488)<br>
+                                    Half : HK$228 (original price : HK$298)<br>
+                                    Dish : HK$128 (original price : HK$168)<br>
+                                </p>
+								<p class="view-more"><a class="button" href>+ View More</a></p>
+							</div>
+						</div>
 <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
