--- a/dining/food0061.html
+++ b/dining/food0061.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Tram View Cafe Ice Drip Coffee</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price : HK$68</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.tramviewcafe.com.hk/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
