--- a/dining/food0062.html
+++ b/dining/food0062.html
@@ -93,7 +93,7 @@
                         </div>
                         <h1> Enjoy special price of HK$1 Mini Pork Neck Meat Laksa Tsaam Tsaam upon any patronage of
                             over HK$120</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price : HK$50</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.beppu.com.hk/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
