--- a/dining/food0063.html
+++ b/dining/food0063.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free appetizer or salad (except Red Lobster Salad)</h1>
-                        <div class="description"></div>
+                        <div class="description">Available from Sunday to Thursday only</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.facebook.com/redlobsterhk/">
                                 <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
