--- a/dining/food1006.html
+++ b/dining/food1006.html
@@ -93,10 +93,7 @@
                             </div>
                         </div>
                         <h1> HK$50 cash coupon upon dine-in purchase at every HK$200</h1>
-                        <div class="description">Customers can receive one $50 cash coupon upon dine-in purchase at
-                            every $200 under the brands under LHGroup and Kabushikigaisha Limited (while stock lasts).
-                            Cash coupon can be used in all outlets under LHGroup and Kabushikigaisha Limited and the
-                            valid da</div>
+                        <div class="description"></div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_1006_outlet_address.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
@@ -123,6 +120,16 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
+                        <div class="details">
+							<h3>Offer Details</h3>
+							<div class="content"> 
+								<p>Customers can receive one $50 cash coupon upon dine-in purchase at
+                                    every $200 under the brands under LHGroup and Kabushikigaisha Limited (while stock lasts).
+                                    Cash coupon can be used in all outlets under LHGroup and Kabushikigaisha Limited and the
+                                    valid da</p>
+								<p class="view-more"><a class="button" href>+ View More</a></p>
+							</div>
+						</div>
 <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
