--- a/dining/food1007.html
+++ b/dining/food1007.html
@@ -93,12 +93,7 @@
                             </div>
                         </div>
                         <h1> HK$988 for Paralithodes Camtschaticus / Leopard Carol Trout and Chinese Barbecue</h1>
-                        <div class="description">Monday, Wednesday, Friday & Sunday<br>
-                            Seafood：Paralithodes Camtschaticus<br>
-                            Chinese Barbecue：Roasted Goose (Half) or Crispy Chicken (Whole)<br><br>
-                            Tuesday, Thursday & Saturday<br>
-                            Seafood：Leopard Coral Trout<br>
-                            Chinese Barbecue：Roasted Goose (Half) or Crispy Chicken (Whole)</div>
+                        <div class="description"></div>
                         <div class="btn-book"><a class="btn-cta print"
                                 href="http://www.tlcatering.com.hk/branch02_sheungwan.html"> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
@@ -136,6 +131,18 @@
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Monday, Wednesday, Friday & Sunday<br>
+                                Seafood：Paralithodes Camtschaticus<br>
+                                Chinese Barbecue：Roasted Goose (Half) or Crispy Chicken (Whole)<br><br>
+                                Tuesday, Thursday & Saturday<br>
+                                Seafood：Leopard Coral Trout<br>
+                                Chinese Barbecue：Roasted Goose (Half) or Crispy Chicken (Whole)</p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
                         </div>
                     </div>
 <div class="book">
