--- a/dining/food1109.html
+++ b/dining/food1109.html
@@ -93,7 +93,10 @@
                         </div>
                         <h1> 30% off at lunch buffet of City Café during the promotion period, plus 10% service charge
                             based on original price.</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price:<br>
+                            Adult $268 / Senior $248 / Child $188 (Mon to Fri, except Public Holidays)<br>
+                            Adult $298 / Senior $278 / Child $208 (Sat to Sun & Public Holidays)<br>
+                            *Plus 10% service charge</div>
                         <div class="btn-book"><a class="btn-cta print"
                                 href="https://thecityview.com.hk/hk/dining/city-cafe.php"> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
