--- a/dining/food1114.html
+++ b/dining/food1114.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% off on designated food: One Selection of Signature Dishes.</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price HK$498</div>
                         <div class="btn-book"><a class="btn-cta print"
                                 href="https://www.regalhotel.com/regal-kowloon-hotel/en/restaurants-and-bars/restaurant-mezzo.html">
                                 <span class="label">Book
