--- a/dining/food1119.html
+++ b/dining/food1119.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <h1> 50% off on designated food: Deep Fried Sole Fillet with Crispy Bone.</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price HK$268</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.goldenbullrestaurant.com.hk">
                                 <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
