--- a/dining/food1127.html
+++ b/dining/food1127.html
@@ -93,9 +93,7 @@
                             </div>
                         </div>
                         <h1> 15% off on dine-in purchase</h1>
-                        <div class="description">Chef's recommendations - Fried Prawns with Chilli Sauce (Sizzling),
-                            Sauted Scallops with Broccoli, Peking Duck, Fried Garoupa with Sweet and Sour Sauce, Deep
-                            Fried Crispy Rice with Meats and Seafoods</div>
+                        <div class="description">Lunch & dinner special set are excluded, plus 10% Service charge</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.redpepper.com.hk/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
@@ -129,6 +127,15 @@
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Chef's recommendations - Fried Prawns with Chilli Sauce (Sizzling),
+                                Sauted Scallops with Broccoli, Peking Duck, Fried Garoupa with Sweet and Sour Sauce, Deep
+                                Fried Crispy Rice with Meats and Seafoods</p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
                         </div>
                     </div>
 <div class="book">
