--- a/dining/food1130.html
+++ b/dining/food1130.html
@@ -92,7 +92,20 @@
                             </div>
                         </div>
                         <h1> 15% off on Takeaway Sushi Set</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price:<br>
+                            Genki A - HK$439 <br>
+                            Genki B - HK$400 <br>
+                            Sushi Roll Set - HK$172 <br>
+                            Classic Sushi Set A - HK$197 <br>
+                            Classic Sushi Set B - HK$201 <br>
+                            Classic Sushi Set C - HK$186 <br>
+                            Special Sushi Set A - HK$118 <br>
+                            Special Sushi Set B - HK$106 <br>
+                            Special Sushi Set C - HK$119 <br>
+                            Special Sushi Set D - HK$125.5 <br>
+                            Shashimi - HK$178 <br>
+                            Kids Sushi Set - HK$105 <br>
+                            Salmon Sushi Set - HK$163</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_1130_outlet_address_R.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
