--- a/dining/food1148.html
+++ b/dining/food1148.html
@@ -93,7 +93,8 @@
                         </div>
                         <h1> Enjoy HK$50 cash rebate upon spending HK$300 or above (excluding 10% service charge) in
                             single transaction</h1>
-                        <div class="description"></div>
+                        <div class="description">Offer is valid from Monday to Friday, after 6pm
+                            Customers must spend in electronic payment.</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.redant.com.hk/en/home"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
