--- a/dining/food1152.html
+++ b/dining/food1152.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% off on Captain Cat Cookies / Captain Cat French Palmier Cookies</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price $30</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.cruise.com.hk/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
