--- a/dining/food1153.html
+++ b/dining/food1153.html
@@ -93,7 +93,7 @@
                         </div>
                         <h1> 50% off on "Sweet & sour pork with pineapple" or "Fried beef with assorted fungus & BBQ
                             sauce" (Choose 1 item only)</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price $138</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.gatewaycuisine.com/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
