--- a/dining/food1161.html
+++ b/dining/food1161.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Promotion price of HK$15 for Latte (S)</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price HK$24UP</div>
                         <div class="btn-book"><a class="btn-cta print"
                                 href="https://www.mcdonalds.com.hk/en/restaurant-locator.html"> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
