--- a/dining/food0020.html
+++ b/dining/food0020.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Chef's Inspiration Menu</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price:  HK$1,688</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_20_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
