--- a/dining/food0027.html
+++ b/dining/food0027.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Premium Seasonal Kaiseki Menu</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price: HK$1,880 per person</div>
                         <div class="btn-book"><a class="btn-cta print" href="EN_Dine_27_menu.pdf"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
