--- a/dining/food0043.html
+++ b/dining/food0043.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% discount on Conger Sushi</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price : HK$58</div>
                         <div class="btn-book"><a class="btn-cta print" href="https://www.uoman-grp.com"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
