--- a/dining/food0046.html
+++ b/dining/food0046.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free Baked Spaghetti Bolognese with Cheese and Pan-Fried Egg</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price : HK$88</div>
                         <div class="btn-book"><a class="btn-cta print" href=""> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
                             <div class="addthis_inline_share_toolbox"><a> <span class="share-icon"></span><span
