--- a/dining/food0048.html
+++ b/dining/food0048.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% discount on Assorted Seafood with Vegetable Soup</h1>
-                        <div class="description"></div>
+                        <div class="description">Original price : HK$100</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://lammarainbow.com"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
