--- a/dining/food0052.html
+++ b/dining/food0052.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Special discount on Nanking Peking Duck</h1>
-                        <div class="description">Special price : HK$198 each (original price : HK$398 each)</div>
+                        <div class="description">Available from 6pm to 10pm</div>
                         <div class="btn-book"><a class="btn-cta print" href=""> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
                             <div class="addthis_inline_share_toolbox"><a> <span class="share-icon"></span><span
@@ -122,6 +122,13 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
+                        <div class="details">
+							<h3>Offer Details</h3>
+							<div class="content"> 
+								<p>Special price : HK$198 each (original price : HK$398 each)</p>
+								<p class="view-more"><a class="button" href>+ View More</a></p>
+							</div>
+						</div>
 <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
