--- a/dining/food0060.html
+++ b/dining/food0060.html
@@ -92,9 +92,7 @@
                             </div>
                         </div>
                         <h1> Special discount on selected dishes</h1>
-                        <div class="description">Shar-pei Puppies Mousse : HK$22.8 (original price : HK$30)
-                            Double Boiled Dried Scallop and Fish Mawin Winter Melon Ring : HK$38 (original price :
-                            HK$48)</div>
+                        <div class="description">Served All Day</div>
                         <div class="btn-book"><a class="btn-cta print" href=""> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
                             <div class="addthis_inline_share_toolbox"><a> <span class="share-icon"></span><span
@@ -129,6 +127,15 @@
                         </div>
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Shar-pei Puppies Mousse : HK$22.8 (original price : HK$30)<br>
+                                Double Boiled Dried Scallop and Fish Mawin Winter Melon Ring : HK$38 (original price :
+                                HK$48)</p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
+                        </div>
                     </div>
 <div class="book">
                         <h3>How To Book</h3>
