--- a/dining/food1008.html
+++ b/dining/food1008.html
@@ -93,10 +93,7 @@
                             </div>
                         </div>
                         <h1> HK$988 for Paralithodes Camtschaticus and Chinese Barbecue</h1>
-                        <div class="description">Monday, Wednesday & Friday<br>
-                            Seafood：Paralithodes Camtschaticus<br>
-                            Chinese Barbecue：Roasted Goose (Half) or Crispy Chicken (Whole)
-                        </div>
+                        <div class="description"></div>
                         <div class="btn-book"><a class="btn-cta print"
                                 href="http://www.tlcatering.com.hk/branch01_saiwan.html"> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
@@ -134,6 +131,16 @@
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h3>Offer Details</h3>
+                        <div class="content"> 
+                            <p>Monday, Wednesday & Friday<br>
+                                Seafood：Paralithodes Camtschaticus<br>
+                                Chinese Barbecue：Roasted Goose (Half) or Crispy Chicken (Whole)
+                            </p>
+                            <p class="view-more"><a class="button" href>+ View More</a></p>
                         </div>
                     </div>
 <div class="book">
