--- a/dining/food1115.html
+++ b/dining/food1115.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% off on designated food: Regal Court Signature Dishes.</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price HK$598</div>
                         <div class="btn-book"><a class="btn-cta print"
                                 href="https://www.regalhotel.com/regal-kowloon-hotel/en/restaurants-and-bars/restaurant-regal-court.html">
                                 <span class="label">Book
