--- a/dining/food1116.html
+++ b/dining/food1116.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Buy one, get one free LOBSTER DELIGHT Menu</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price HK$488</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.taiwoorestaurant.com/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
