--- a/dining/food1137.html
+++ b/dining/food1137.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% off on Steamed Grouper (around catty)</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price HK$198</div>
                         <div class="btn-book"><a class="btn-cta print" href=""> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
                             <div class="addthis_inline_share_toolbox"><a> <span class="share-icon"></span><span
