--- a/dining/food1140.html
+++ b/dining/food1140.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> Promotion price of HK$1500 (plus 10% service charge) for designated set menu</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price $1880 + 10% service charge</div>
                         <div class="btn-book"><a class="btn-cta print" href=""> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
                             <div class="addthis_inline_share_toolbox"><a> <span class="share-icon"></span><span
