--- a/dining/food1146.html
+++ b/dining/food1146.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% off on Spanish Iberico Pork</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price HK$86</div>
                         <div class="btn-book"><a class="btn-cta print"
                                 href="https://www.facebook.com/oldpier.hotpot.hk/"> <span class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
