--- a/dining/food1150.html
+++ b/dining/food1150.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <h1> 50% off on Braised Abalone with Chicken</h1>
-                        <div class="description"></div>
+                        <div class="description">Original Price $168</div>
                         <div class="btn-book"><a class="btn-cta print" href="http://www.hoikonghk.com.hk/"> <span
                                     class="label">Book
                                     Now</span><span class="hover">Book Now</span></a>
